fix map size on mobile

--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -6,6 +6,13 @@
 .Map-block {
   display: block;
   margin: 0 auto;
+  max-width: 100%;
+}
+
+@media screen and (max-width: 600px) {
+  .Map-block {
+    height: 220px;
+  }
 }
 
 .Map-country {
